[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/images/scenes/level_score/2_medium/button_next.png" type="Texture" id=1]
[ext_resource path="res://scenes/level_scores/2_medium.gd" type="Script" id=2]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/2_0.png" type="Texture" id=3]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/button_home.png" type="Texture" id=4]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/3_0.png" type="Texture" id=6]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/background.png" type="Texture" id=8]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/button_next_locked.png" type="Texture" id=9]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/2_5.png" type="Texture" id=11]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/1_0.png" type="Texture" id=12]
[ext_resource path="res://assets/images/scenes/level_score/0_0.png" type="Texture" id=13]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/1_5.png" type="Texture" id=14]
[ext_resource path="res://assets/fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/images/scenes/level_score/2_medium/button_replay.png" type="Texture" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 12 ) ],
"loop": false,
"name": "1_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "2_5",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "1_5",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "0_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": false,
"name": "3_0",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "2_0",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 44
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 15 )

[node name="2_medium" type="Node2D"]
script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[node name="button_home" type="TouchScreenButton" parent="."]
position = Vector2( 431, 803 )
normal = ExtResource( 4 )

[node name="button_replay" type="TouchScreenButton" parent="."]
position = Vector2( 788, 803 )
normal = ExtResource( 16 )

[node name="button_next" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 1144, 803 )
normal = ExtResource( 1 )

[node name="button_next_locked" type="Sprite" parent="."]
position = Vector2( 1316, 876 )
texture = ExtResource( 9 )

[node name="score_stars" type="AnimatedSprite" parent="."]
position = Vector2( 959, 331 )
frames = SubResource( 1 )
animation = "0_0"

[node name="score" type="RichTextLabel" parent="."]
margin_left = 875.0
margin_top = 571.0
margin_right = 1192.0
margin_bottom = 640.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[right][color=black]0[/color][/right]"
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="streak" type="RichTextLabel" parent="."]
margin_left = 891.0
margin_top = 643.0
margin_right = 1192.0
margin_bottom = 706.0
rect_pivot_offset = Vector2( 441, 120 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[right][color=black]0[/color][/right]"
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="high_score" type="RichTextLabel" parent="."]
margin_left = 891.0
margin_top = 717.0
margin_right = 1192.0
margin_bottom = 780.0
rect_pivot_offset = Vector2( 441, 120 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[right][color=black]0[/color][/right]"
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="button_home" to="." method="_on_button_home_pressed"]
[connection signal="pressed" from="button_replay" to="." method="_on_button_replay_pressed"]
[connection signal="pressed" from="button_next" to="." method="_on_button__next_pressed"]
